--- a/contact.html
+++ b/contact.html
@@ -190,7 +190,7 @@
                         <h2 class="contact-title">Get in Touch</h2>
                     </div>
                     <div class="col-lg-8">
-                        <form class="form-contact contact_form" action="mailto : h.g.wadhwani@gmail.com" method="post" id="contactForm"``>
+                        <form class="form-contact contact_form" action="mailto:h.g.wadhwani@gmail.com" method="post" id="contactForm" enctype="text/plain">
                             <div class="row">
                                 <div class="col-12">
                                     <div class="form-group">
