--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@
                                 </div>
                             </div>
                             <div class="form-group mt-3">
-                                <button type="submit" class="button button-contactForm boxed-btn">Send</button>
+                                <input type="submit" class="button button-contactForm boxed-btn" value="Send">
                             </div>
                         </form>
                     </div>
