Edits in Careers, Contacts, and Get a Quote Page

--- a/careers.html
+++ b/careers.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>KK Global - Contact Us </title>
+    <title>KK Global - Careers </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 
    <!-- CSS here -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -105,7 +105,7 @@
                                         </div>
                                         <!-- Header-btn -->
                                         <div class="header-right-btn d-none d-lg-block ml-20">
-                                            <a href="contact.html" class="btn header-btn">Get A Qoute</a>
+                                            <a href="getaquote.html" class="btn header-btn">Get A Qoute</a>
                                         </div>
                                     </div>
                                 </div> 
@@ -128,11 +128,11 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap">
-                                <h2>Contact Us</h2>
+                                <h2>Careers</h2>
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                        <li class="breadcrumb-item"><a href="#">Contact</a></li> 
+                                        <li class="breadcrumb-item"><a href="careers.html">Careers</a></li> 
                                     </ol>
                                 </nav>
                             </div>
