--- a/about.html
+++ b/about.html
@@ -68,11 +68,11 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt=""style="width: 75px;"></a>
+                                    <a href="index.html"><img src="assets/img/logo/Final logo.png" alt=""style="width: 75px;"></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10">
-                                <div class="menu-wrapper  d-flex align-items-center justify-content-end">
+                                <div class="menu-wrapper  d-flex align-items-center justify-content-end" >
                                     <!-- Main-menu -->
                                     <div class="main-menu d-none d-lg-block">
                                         <nav> 
@@ -122,7 +122,7 @@
     <main>
         <!--? slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/hero/about.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/logo/loder.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
