--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                         <div class="single-footer-caption mb-50">
                             <!-- logo -->
                             <div class="footer-logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt="logo" style="width: 75px;"></a>
+                                <a href="index.html"><img src="assets/img/logo/Final logo.png" alt=""style="width: 230px;"></a>
                             </div>
                            <!--<div class="footer-tittle">
                                 <div class="footer-pera">
