--- a/careers.html
+++ b/careers.html
@@ -151,7 +151,7 @@
                         <h2 class="contact-title">Send your CV</h2>
                     </div>
                     <div class="col-lg-8">
-                        <form class="form-contact contact_form" action="mailto:h.g.wadhwani@gmail.com" method="post" enctype="text/plain">
+                        <form class="form-contact contact_form" action="mailto:info@kkglobal.co" method="post" enctype="text/plain">
                             <div class="row">
                                 <!-- <div class="col-12">
                                     <div class="form-group">
