--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
     <main>
         <!--? slider Area Start-->
         <div class="slider-area ">
-            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/hero/about.jpg">
+            <div class="single-slider hero-overly slider-height2 d-flex align-items-center" data-background="assets/img/contact_us.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12">
@@ -190,7 +190,7 @@
                         <h2 class="contact-title">Get in Touch</h2>
                     </div>
                     <div class="col-lg-8">
-                        <form class="form-contact contact_form" action="mailto:h.g.wadhwani@gmail.com" method="post" enctype="text/plain">
+                        <form class="form-contact contact_form" action="mailto:info@kkglobal.co" method="post" enctype="text/plain">
                             <div class="row">
                                 <div class="col-12">
                                     <div class="form-group">
