--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                                         </div>
                                         <!-- Header-btn -->
                                         <div class="header-right-btn d-none d-lg-block ml-20">
-                                            <a href="contact.html" class="btn header-btn">Get A Qoute</a>
+                                            <a href="getaquote.html" class="btn header-btn">Get A Qoute</a>
                                         </div>
                                     </div>
                                 </div> 
