--- a/getaquote.html
+++ b/getaquote.html
@@ -193,9 +193,9 @@
                         <form class="form-contact contact_form" action="mailto:info@kkglobal.co" method="post" enctype="text/plain">
                             <div class="row">
                                 <div class="col-12">
-                                    <div class="form-group">
+                                    <!-- <div class="form-group">
                                         <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Message'" placeholder=" Enter Message"></textarea>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
