--- a/elements.html
+++ b/elements.html
@@ -76,7 +76,7 @@
 									<div class="main-menu d-none d-lg-block">
 										<nav> 
 											<ul id="navigation">                                                                                          
-												<li><a href="index.html">Home</a></li>
+												<li><a href="index.html"x>Home</a></li>
 												<li><a href="about.html">About</a></li>
 												<li><a href="services.html">Services</a>
 													<ul class="submenu">
