--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                        </div>
                    </div>
                 </div>
-               <div class="header-bottom  header-sticky">
+               <div class="header-bottom  header-sticky" style="background-color: whitesmoke;">
                     <div class="container">
                         <div class="row align-items-center">
                             <!-- Logo -->
