Changes in Index Page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Header Start -->
     <div class="header-area">
         <div class="main-header ">
-            <div class="header-top d-none d-lg-block">
+            <!-- <div class="header-top d-none d-lg-block">
                 <div class="container">
                     <div class="col-xl-12">
                         <div class="row d-flex justify-content-between align-items-center">
@@ -68,7 +68,7 @@
                                     <li>Phone: +91 80877 57760</li>
                                     <li>Email: info@kkglobal.co</li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <!--<div class="header-info-right">
                                 <ul class="header-social">    
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -77,10 +77,10 @@
                                     <li> <a href="#"><i class="fab fa-google-plus-g"></i></a></li>
                                 </ul>
                             </div>-->
-                        </div>
+                        <!-- </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="header-bottom  header-sticky">
                 <div class="container" style="margin-right: 0px; margin-left: 0px; padding-left: 0px; padding-right: 0px;">
                     <div class="row">
@@ -101,11 +101,11 @@
                         <div class="col align-self-end " style="margin-right: 0px; margin-left: 0px; padding-left: 0px; padding-right: 0px;"> 
                             <div class="menu-wrapper  d-flex align-items-end justify-content-end">
                                 <div class="vertical-menu">
-                                <div class="main-menu d-none d-lg-block" style="padding: 0px 0px 0px 0px;">
+                                <div class="main-menu d-none d-lg-block " style="padding: 0px 0px 0px 0px;" >
                                     <nav> 
                                         <ul id="navigation">                                                                                          
                                             <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About</a></li>
+                                            <li><a href="about.html">About Us</a></li>
                                             <li><a href="services.html">Services</a>
                                                 <ul class="submenu" >
                                                     <li><a href="airfreight.html">Air Freight</a></li>
@@ -119,10 +119,9 @@
                                                 </ul>
                                             </li>
                                             <li><a href="careers.html">Careers</a>
-                                            
                                             <li><a href="contact.html">Contact</a></li>
                                             <!-- <div class="header-right-btn d-none d-lg-block ml-20"> -->
-                                             <li><a href="getaquote.html" class="btn header-btn">Get A Qoute</a></li>
+                                             <!-- <li><a href="getaquote.html" class="btn header-btn">Get A Qoute</a></li> -->
                                             <!-- </div> -->
                                         </ul>
                                         
@@ -461,7 +460,7 @@
                             </div>
                         </form>	-->
                         <div class="col-lg-12">
-                            <button name="submit" class="submit-btn">Request a Quote</button>
+                            <button name="submit" class="submit-btn"><a href="getaquote.html"> Request a Quote</a></button>
                         </div>
                     </div>
                 </div>
@@ -736,7 +735,17 @@
                                     <li><a href="#">Monday-Saturday 9:30am-7:30pm</a></li>
                                     <!--<li><a href="#"> Tuesday-Friday 11am-8pm</a></li>-->
                                     <!--<li><a href="#"> Saturday 10am-6pm</a></li>-->
-                                    <li><a href="#"> Sunday 10am-4pm</a></li>
+                                    <!-- <li><a href="#"> Sunday 10am-4pm</a></li> -->
+                                </ul>
+                                <br><br>
+                                <h4>Get In touch</h4>
+                                <ul>
+                                    <!-- <li><a href="#"></a></li> -->
+                                    <li>Phone: +91 80877 57760</li>
+                                    <li>Email: info@kkglobal.co</li>
+                                    <!--<li><a href="#"> Tuesday-Friday 11am-8pm</a></li>-->
+                                    <!--<li><a href="#"> Saturday 10am-6pm</a></li>-->
+                                    <!-- <li><a href="#"> Sunday 10am-4pm</a></li> -->
                                 </ul>
                             </div>
                         </div>
