--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                         <!-- Logo -->
                         <div class="col-2 ali">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo_new.png" alt=""style="width: 150px;"></a>
+                                <a href="index.html"><img src="assets/img/logo_new.png" class="center-block img-responsive" alt=""style="width: 150px; display:block ; margin-left: auto; margin-right: auto;"></a>
                             </div>
                         </div>
                         <!-- <div class="col"></div> -->
                         <div class="col">
                             <!-- <div class="logo"> -->
-                                <a href="index.html"><img src="assets/img/logo_new_written.png" alt="" style="width:900px;"></a><!--style="width: 320px;"-->
+                                <a href="index.html"><img src="assets/img/logo_new_written.png" class="center-block img-responsive" alt="" style="width:900px; display:block ; margin-left: auto; margin-right: auto; padding-top: 30px; "></a><!--style="width: 320px;"-->
                             <!-- </div> -->
                         </div>
                     
@@ -363,7 +363,7 @@
                             <div class="col-lg-12">
                                 <!-- Section Tittle -->
                                 <div class="section-tittle mb-50">
-                                    <span>Get a Qote For Free</span>
+                                    <span>Get a Quote For Free</span>
                                     <h2>Request a Free Quote</h2>
                                     <p><b>KK Global Logistics Services</b> presents you services with flexible, convenient and easy ways of freight. Do let us know about your requirements by clicking on the button below. </p>
                                 </div>
@@ -708,6 +708,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-4">
                             <span class="contact-number f-right" style="width: 370px;">+91 80877 57760</span>
+                            <span class="contact-number f-right btn header-btn" style="width: 370px;"><a href="getaquote.html" >Get a Quote</span>
                         </div>
                     </div>
                 </div>
@@ -732,7 +733,7 @@
                             <div class="footer-tittle">
                                 <h4>Open hour</h4>
                                 <ul>
-                                    <li><a href="#">Monday-Saturday 9:30am-7:30pm</a></li>
+                                    <li><a href="#">Monday-Saturday 9:30am-6:30pm</a></li>
                                     <!--<li><a href="#"> Tuesday-Friday 11am-8pm</a></li>-->
                                     <!--<li><a href="#"> Saturday 10am-6pm</a></li>-->
                                     <!-- <li><a href="#"> Sunday 10am-4pm</a></li> -->
@@ -743,6 +744,7 @@
                                     <!-- <li><a href="#"></a></li> -->
                                     <li>Phone: +91 80877 57760</li>
                                     <li>Email: info@kkglobal.co</li>
+                                    <li>GSTIN - 27BEPPK9647R1Z7</li>
                                     <!--<li><a href="#"> Tuesday-Friday 11am-8pm</a></li>-->
                                     <!--<li><a href="#"> Saturday 10am-6pm</a></li>-->
                                     <!-- <li><a href="#"> Sunday 10am-4pm</a></li> -->
