--- a/courierservices.html
+++ b/courierservices.html
@@ -590,7 +590,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6">
-                        <div class="single-footer-caption mb-50">
+                        <div class="single-footer-caption mb-50" style="padding-left: 50px; padding-right: 50px;">
                             <!-- logo -->
                             <div class="footer-logo">
                                 <a href="index.html"><img src="assets/img/logo/Final logo.png" alt=""style="width: 400px;"></a>
