--- a/supplychainmanagement.html
+++ b/supplychainmanagement.html
@@ -148,7 +148,7 @@
                     <div class="container">
                         <div class="row">
                             <!--<div class="col-lg-6 col-md-12">-->
-                                <div class="about-caption mb-50">
+                                <div class="about-caption mb-50" style="padding-left: 50px; padding-right: 50px;">
                                     <!-- Section Tittle -->
                                     <div class="section-tittle mb-35">
                                         <h2></h2><span>Supply Chain Management</span></h2>
@@ -598,7 +598,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6">
-                        <div class="single-footer-caption mb-50">
+                        <div class="single-footer-caption mb-50" >
                             <!-- logo -->
                             <div class="footer-logo">
                                 <a href="index.html"><img src="assets/img/logo/Final logo.png" alt=""style="width: 400px;"></a>
