--- a/transportation.html
+++ b/transportation.html
@@ -148,7 +148,7 @@
                     <div class="container">
                         <div class="row">
                             <!--<div class="col-lg-6 col-md-12">-->
-                                <div class="about-caption mb-50">
+                                <div class="about-caption mb-50" style="padding-left: 50px; padding-right: 50px;">
                                     <!-- Section Tittle -->
                                     <div class="section-tittle mb-35">
                                         <h2></h2><span>Transportation</span></h2>
