--- a/careers.html
+++ b/careers.html
@@ -234,7 +234,7 @@
                 <!-- Footer Menu -->
                 <div class="row d-flex justify-content-between">
                     <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
-                        <div class="single-footer-caption mb-50">
+                        <div class="single-footer-caption mb-50" style="padding-left: 50px; padding-right: 50px;">
                             <div class="footer-tittle">
                                 <h4>COMPANY</h4>
                                 <ul>
