--- a/customclearance.html
+++ b/customclearance.html
@@ -148,7 +148,7 @@
                     <div class="container">
                         <div class="row">
                             <!--<div class="col-lg-6 col-md-12">-->
-                                <div class="about-caption mb-50">
+                                <div class="about-caption mb-50" style="padding-left: 50px; padding-right: 50px;">
                                     <!-- Section Tittle -->
                                     <div class="section-tittle mb-35">
                                         <h2></h2><span>Custom Clearance</span></h2>
@@ -557,7 +557,7 @@
                     </div>
                 </div>
                 <!-- Footer Menu -->
-                <div class="row d-flex justify-content-between">
+                <div class="row d-flex justify-content-between" style="padding-left: 50px; padding-right: 50px;">
                     <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
