--- a/airfreight.html
+++ b/airfreight.html
@@ -167,7 +167,7 @@
                                     </p>
 
                                     <p>
-                                        We are fully equipped to handle charters for special projects, oversized cargo and dangerous goods. Each shipment is handled with care by our experts so that your goods reach you safely no matter what.
+                                        We are fully equipped to handle charters for special projects, oversized cargo. Each shipment is handled with care by our experts so that your goods reach you safely no matter what.
                                     </p>
                                     <p>
                                         <b>Key Features</b>
