--- a/seafreight.html
+++ b/seafreight.html
@@ -164,7 +164,7 @@
                                         <u>Customised Service</u>
                                     </p>
                                     <p>
-                                        We offer access to premium FCL sailings that work with the dynamics of your supply chain. With services that span between 10 to 50 days, we have experienced teams at origin and destination that can help you optimize each shipment for cost, route, or transit time.
+                                        We offer access to premium FCL sailings that work with the dynamics of your supply chain at origin and destination that can help you optimize each shipment for cost, route, or transit time.
                                     </p>
                                     <p>
                                         <u>Reliable and Trusted Carriers</u>
@@ -176,7 +176,7 @@
                                         <u>Premium Service</u>
                                     </p>
                                     <p>
-                                        We providing premium service on sailings from China, to ensure your urgent cargo arrives to its destination on time, even when the allocation is exceeded.
+                                        We providing premium service to ensure your urgent cargo arrives to its destination on time, even when the allocation is exceeded.
                                     </p>
                                     <p>
                                         <b><u>LCL Shipping Services</u></b>
