--- a/transportation.html
+++ b/transportation.html
@@ -163,7 +163,7 @@
                                         <ul>
                                             <li>•	Door pick and door deliveries</li>
                                             <li>•	Transportation of standard containers</li>
-                                            <li>•	Movement of smaller cargo via 3 ton, 7 ton an 10 ton picks up</li>
+                                            <!-- <li>•	Movement of smaller cargo via 3 ton, 7 ton an 10 ton picks up</li> -->
                                             <li>•	Damage free and timely delivery</li>
                                             <li>•	Temperature controlled shipments – Reefer Trucks</li>
                                             <li>•	Handling of Out Of Gauge cargo (OOG) locally and Internationally via Wide Load, Low Beds vehicles</li>
