--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <!-- Preloader Start -->
     <header>
         <!-- Header Start -->
-       <div class="header-area" style="background-color: whitesmoke;">
+       <div class="header-area" >
             <div class="main-header ">
                 <div class="header-top d-none d-lg-block">
                    <div class="container">
@@ -62,7 +62,7 @@
                        </div>
                    </div>
                 </div>
-               <div class="header-bottom  header-sticky" style="background-color: whitesmoke;">
+               <div class="header-bottom  header-sticky" >
                     <div class="container">
                         <div class="row align-items-center">
                             <!-- Logo -->
@@ -77,9 +77,9 @@
                                     <div class="main-menu d-none d-lg-block">
                                         <nav> 
                                             <ul id="navigation">                                                                                          
-                                                <li><a href="index.html" style="color: black;">Home</a></li>
-                                                <li><a href="about.html" style="color: black;">About</a></li>
-                                                <li><a href="services.html" style="color: black;">Services</a>
+                                                <li><a href="index.html" >Home</a></li>
+                                                <li><a href="about.html" >About</a></li>
+                                                <li><a href="services.html" >Services</a>
                                                     <ul class="submenu">
                                                         <li><a href="airfreight.html"   >Air Freight</a></li>
                                                         <li><a href="seafreight.html">Sea Freight</a></li>
@@ -98,8 +98,8 @@
                                                         <li><a href="elements.html">Element</a></li>
                                                     </ul>
                                                 </li>-->
-                                                <li><a href="careers.html" style="color: black;">Careers</a>
-                                                <li><a href="contact.html" style="color: black;">Contact</a></li>
+                                                <li><a href="careers.html" >Careers</a>
+                                                <li><a href="contact.html" >Contact</a></li>
                                             </ul>
                                     </div>
                                     <!-- Header-btn -->
