--- a/about.html
+++ b/about.html
@@ -562,11 +562,12 @@
                             </div>
                             <div class="col-xl-3 col-lg-4">
                                 <span class="contact-number f-right" style="width: 370px;">+91 80877 57760</span>
+                                <span class="contact-number f-right btn header-btn" style="width: 370px;"><a href="getaquote.html" >Get a Quote</span>
                             </div>
                         </div>
                     </div>
                     <!-- Footer Menu -->
-                    <div class="row d-flex justify-content-between">
+                    <div class="row d-flex justify-content-between" style="padding-left: 50px; padding-right: 50px;">
                         <div class="col-xl-2 col-lg-2 col-md-4 col-sm-6">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
@@ -586,10 +587,21 @@
                                 <div class="footer-tittle">
                                     <h4>Open hour</h4>
                                     <ul>
-                                        <li><a href="#">Monday-Saturday 9:30am-7:30pm</a></li>
+                                        <li><a href="#">Monday-Saturday 9:30am-6:30pm</a></li>
                                         <!--<li><a href="#"> Tuesday-Friday 11am-8pm</a></li>-->
                                         <!--<li><a href="#"> Saturday 10am-6pm</a></li>-->
-                                        <li><a href="#"> Sunday 10am-4pm</a></li>
+                                        <!-- <li><a href="#"> Sunday 10am-4pm</a></li> -->
+                                    </ul>
+                                    <br><br>
+                                    <h4>Get In touch</h4>
+                                    <ul>
+                                        <!-- <li><a href="#"></a></li> -->
+                                        <li>Phone: +91 80877 57760</li>
+                                        <li>Email: info@kkglobal.co</li>
+                                        <li>GSTIN - 27BEPPK9647R1Z7</li>
+                                        <!--<li><a href="#"> Tuesday-Friday 11am-8pm</a></li>-->
+                                        <!--<li><a href="#"> Saturday 10am-6pm</a></li>-->
+                                        <!-- <li><a href="#"> Sunday 10am-4pm</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -617,34 +629,12 @@
                                 <div class="footer-logo">
                                     <a href="index.html"><img src="assets/img/logo/Final logo.png" alt=""style="width: 400px;"></a>
                                 </div>
-                               <!--<div class="footer-tittle">
-                                    <div class="footer-pera">
-                                        <p class="info1">GThe trade war currently ensuing between te US anfd several natxions around thdhe globe, most fiercely with.</p>
-                                    </div>
-                                </div>-->
-                                <!-- Footer Social -->
-                                <!--<div class="footer-social ">
-                                    <a href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fas fa-globe"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>-->
+                               
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Footer Bottom -->
-                <!--<div class="footer-bottom">
-                    <div class="row d-flex align-items-center">
-                        <div class="col-lg-12">
-                            <div class="footer-copy-right text-center">
-                                <p>Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-      Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>-->
+                
             </div>
         </div>
         <!-- Footer End-->
