--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
                 <div class="container" style="margin-right: 0px; margin-left: 0px; padding-left: 0px; padding-right: 0px;">
                     <div class="row">
                         <!-- Logo -->
-                        <div class="col-2 ali">
+                        <div class="col-2 align-items-end">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo_new.png" class="center-block img-responsive" alt=""style="width: 150px; display:block ; margin-left: auto; margin-right: auto;"></a>
+                                <a href="index.html"><img src="assets/img/logo_new.png" class="center-block img-responsive" alt=""style="width: 150px; display:block ; margin-left: auto; margin-right: 0px; padding-top: 30px; "></a>
                             </div>
                         </div>
                         <!-- <div class="col"></div> -->
                         <div class="col-8">
                             <!-- <div class="logo"> -->
-                                <a href="index.html"><img src="assets/img/logo_new_written.png" class="center-block img-responsive" alt="" style="width:900px; display:block ; margin-left: auto; margin-right: auto; padding-top: 30px; "></a><!--style="width: 320px;"-->
+                                <a href="index.html"><img src="assets/img/logo_new_written.png" class="center-block img-responsive" alt="" style="width:900px; display:block ; margin-left: 0px; margin-right: auto; padding-top: 30px; "></a><!--style="width: 320px;"-->
                             <!-- </div> -->
                         </div>
                     
