--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
         </style>
 </head>
-<body>
+<body style="background-color:skyblue;">
 <!--? Preloader Start -->
 <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
@@ -150,7 +150,7 @@
         <!-- <div class="slider-active"> -->
             
             <!-- <div class="single-slider slider-height d-flex align-items-center"> -->
-                <div class="container">
+                <div class="container" style="padding-left: 0px; padding-right: 0px;">
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
