--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>KK Global - Contact Us </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 
    <!-- CSS here -->
