Changes in Column Width

--- a/getaquote.html
+++ b/getaquote.html
@@ -110,7 +110,7 @@ p {
                                 </div>
                             </div>
                             <!-- <div class="col"></div> -->
-                            <div class="col">
+                            <div class="col-8">
                                 <!-- <div class="logo"> -->
                                     <a href="index.html"><img src="assets/img/logo_new_written.png" class="center-block img-responsive" alt="" style="width:900px; display:block ; margin-left: auto; margin-right: auto; padding-top: 30px; "></a><!--style="width: 320px;"-->
                                 <!-- </div> -->
