--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
     <!-- </div> -->
     <div class="slider-area ">
         <div class="slider-active">
-            <!-- <div class="single-slider slider-height d-flex align-items-center"> -->
-                <div class="container" style="padding-left: 0px; padding-right: 0px;">
+    <!-- <div class="single-slider slider-height d-flex align-items-center"> -->
+        <div class="container" style="padding-left: 0px; padding-right: 0px;">
         <!-- <div class="w3-content w3-section"> -->
-            <img class="mySlides w3-animate-right" src="assets/img/airfreight.jpg"  alt="airfreight" style="height: 500px; width: max-content;">
-            <img class="mySlides w3-animate-right" src="assets/img/seafreight.jpg"  alt="seafreight" style="height: 500px; width: max-content;">
-            <img class="mySlides w3-animate-right" src="assets/img/transportation.jpg"  alt="transportation" style="height: 500px; width: max-content;">
-            <img class="mySlides w3-animate-right" src="assets/img/customclearance.jpg"  alt="customclearance" style="height: 500px; width: max-content;">
+            <img class="mySlides w3-animate-right" src="assets/img/airfreight.jpg"  alt="airfreight" style="height: 600px; width: 100%;">
+            <img class="mySlides w3-animate-right" src="assets/img/seafreight.jpg"  alt="seafreight" style="height: 600px; width: 100%;">
+            <img class="mySlides w3-animate-right" src="assets/img/transportation.jpg"  alt="transportation" style="height: 600px; width: 100%;">
+            <img class="mySlides w3-animate-right" src="assets/img/customclearance.jpg"  alt="customclearance" style="height: 600px; width: 100%;">
       </div>
     </div>
 </div>
@@ -234,7 +234,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="seafreight.html">Sea Freight</a></h5>
-                            <p>Working with top carriers around the world, we can offer our clients with the most competitive rates and secure space. Right from booking your cargo, arranging pickup and delivery, and handling import/export documentation, we can manage your ocean shipment door-to-door based on your needs.</p>
+                            <p>Working with top carriers around the world, we can offer our clients with the most competitive rates and secure space. Right from booking your cargo, arranging pickup and delivery, and handling import/export documentation, we can manage your ocean shipment door-to-door based on your needs.<a href="seafreight.html">Read More</a></p>
                         </div>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="airfreight.html">Air Freight</a></h5>
-                            <p>KK Global Logistics services cover all main international airports around the world and we’re counting on that to choose the airlines companies that can transport goods in record time wherever your destination is….. we provide comprehensive Air freight import & export services on all major trade routes.</p>
+                            <p>KK Global Logistics services cover all main international airports around the world and we’re counting on that to choose the airlines companies that can transport goods in record time wherever your destination is….. we provide comprehensive Air freight import & export services on all major trade routes.<a href="airfreight.html">Read More</a></p>
                         </div>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="transportation.html">Transportation</a></h5>
-                            <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation </p>
+                            <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation. <a href="transportation.html">Read More</a><br><br> </p>
                         </div>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="customclearance.html">Custom Clearance</a></h5>
-                            <p>We do all type of customs clearance within the framework as approved by the Government. Our well trained back end and field team is our backbone who are well versed in clearance procedure and related regulations.</p>
+                            <p>We do all type of customs clearance within the framework as approved by the Government. Our well trained back end and field team is our backbone who are well versed in clearance procedure and related regulations.<a href="customclearance.html">Read More</a></p>
                         </div>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="warehousing.html">Warehousing</a></h5>
-                            <p>We have a network of strategically located warehouses for consolidating and safe storage of goods in transit under the care of our logistics control and inventory management team.  </p>
+                            <p>We have a network of strategically located warehouses for consolidating and safe storage of goods in transit under the care of our logistics control and inventory management team.<a href="warehousing.html">Read More</a>  </p>
                         </div>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="projectcargo.html">Project Cargo</a></h5>
-                            <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. </p>
+                            <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More</a><br><br></p>
                         </div>
                     </div>
                 </div>
@@ -300,7 +300,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="courierservices.html">Courier Services</a></h5>
-                            <p>We offer customized, time-bound, cost-effective, door-to-door delivery of international courier services of your valuable Documents and Parcels / Samples with a commitment of speedy, safe and timely delivery.</p>
+                            <p>We offer customized, time-bound, cost-effective, door-to-door delivery of international courier services of your valuable Documents and Parcels / Samples with a commitment of speedy, safe and timely delivery. <a href="courierservices.html">Read More</a></p>
                         </div>
                     </div>
                 </div>
@@ -311,7 +311,7 @@
                         </div>-->
                         <div class="cat-cap">
                             <h5><a href="supplychainmanagement.html">Supply Chain Management</a></h5>
-                            <p>Supply chain management (SCM) is the management of flow of goods and services. It includes movement & storage of raw material, work-in-process inventory and finished goods from point of origin to point of consumption.    </p>
+                            <p>Supply chain management (SCM) is the management of flow of goods and services. It includes movement & storage of raw material, work-in-process inventory and finished goods from point of origin to point of consumption.<a href="supplychainmanagement.html">Read More</a> </p>
                         </div>
                     </div>
                 </div>
@@ -339,7 +339,7 @@
                     <!-- about-img -->
                     <div class="about-img ">
                         <div class="about-font-img">
-                            <img src="assets/img/gallery/about2.png" alt="">
+                            <img src="assets/img/gallery/about2.png" alt="" style=" height: 400px;">
                         </div>
                         <div class="about-back-img d-none d-lg-block">
                             <img src="assets/img/gallery/about1.png" alt="">
@@ -393,7 +393,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-4">
                             <span class="contact-number f-right" style="width: 370px;">+91 80877 57760</span>
-                            <span class="contact-number f-right btn header-btn" style="width: 370px;"><a href="getaquote.html" >Get a Quote</span>
+                            <span class="contact-number f-right btn header-btn" style="width: 370px;"><a href="getaquote.html" >Enquire Here</span>
                         </div>
                     </div>
                 </div>
