--- a/services.html
+++ b/services.html
@@ -9,6 +9,7 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 		<link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 		<!-- CSS here -->
             <link rel="stylesheet" href="assets/css/bootstrap.min.css">
