--- a/seafreight.html
+++ b/seafreight.html
@@ -172,9 +172,9 @@
                     <div class="container">
                         <div class="row">
                             <!--<div class="col-lg-6 col-md-12">-->
-                                <div class="about-caption mb-50">
+                                <div class="about-caption mb-50" style="padding-left: 50px; padding-right: 50px;">
                                     <!-- Section Tittle -->
-                                    <div class="section-tittle mb-35">
+                                    <div class="section-tittle mb-35" >
                                         <h2></h2><span>Sea Freight</span></h2>
                                         
                                     </div>
