--- a/careers.html
+++ b/careers.html
@@ -184,28 +184,28 @@
                                 </div> -->
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <input class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" placeholder="Enter your name" required>
+                                        <input class="form-control valid" name="name" id="name" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" placeholder="Enter your name" required style="border: 1px solid #1c165c;">
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <input class="form-control valid" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="Email" required>
+                                        <input class="form-control valid" name="email" id="email" type="email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" placeholder="Email" required style="border: 1px solid #1c165c;">
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <input class="form-control" name="position_to_apply" id="position_to_apply" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Position you want to apply for'" placeholder="Enter Position you want to apply for" required>
+                                        <input class="form-control" name="position_to_apply" id="position_to_apply" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Position you want to apply for'" placeholder="Enter Position you want to apply for" required style="border: 1px solid #1c165c;">
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group">
                                         <label for="resume"><b>Upload your CV :</b></label>
-                                        <input type="file" id="resume" name="resume" placeholder="Your CV/Resume" required>
+                                        <input type="file" id="resume" name="resume" placeholder="Your CV/Resume" required style="border: 1px solid #1c165c;">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group mt-3">
-                                <input type="submit" class="button button-contactForm boxed-btn" value="Send">
+                                <input type="submit" class="button button-contactForm boxed-btn" value="Send" style="border: 1px solid #1c165c;">
                             </div>
                         </form>
                     </div>
