--- a/services.html
+++ b/services.html
@@ -186,7 +186,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="seafreight.html">Sea Freight</a></h5>
-                                <p>Working with top carriers around the world, we can offer our clients with the most competitive rates and secure space. Right from booking your cargo, arranging pickup and delivery, and handling import/export documentation, we can manage your ocean shipment door-to-door based on your needs.<a href="seafreight.html">Read More</a></p>
+                                <p>Working with top carriers around the world, we can offer our clients with the most competitive rates and secure space. Right from booking your cargo, arranging pickup and delivery, and handling import/export documentation, we can manage your ocean shipment door-to-door based on your needs.<a href="seafreight.html">Read More ...</a></p>
                             </div>
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="airfreight.html">Air Freight</a></h5>
-                                <p>KK Global Logistics services cover all main international airports around the world and we’re counting on that to choose the airlines companies that can transport goods in record time wherever your destination is….. we provide comprehensive Air freight import & export services on all major trade routes.<a href="airfreight.html">Read More</a></p>
+                                <p>KK Global Logistics services cover all main international airports around the world and we’re counting on that to choose the airlines companies that can transport goods in record time wherever your destination is….. we provide comprehensive Air freight import & export services on all major trade routes.<a href="airfreight.html">Read More ...</a></p>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="transportation.html">Transportation</a></h5>
-                                <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation. <a href="transportation.html">Read More</a><br><br> </p>
+                                <p>We offer dependable, flexible and wide range of trucking and inter modal services. Our Inland transportation system works as a vital connecting link in our wide area of Supply chain management system. Our extensive array of trucks, trailers and other inland transportation. <a href="transportation.html">Read More ...</a><br><br> </p>
                             </div>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="customclearance.html">Custom Clearance</a></h5>
-                                <p>We do all type of customs clearance within the framework as approved by the Government. Our well trained back end and field team is our backbone who are well versed in clearance procedure and related regulations.<a href="customclearance.html">Read More</a></p>
+                                <p>We do all type of customs clearance within the framework as approved by the Government. Our well trained back end and field team is our backbone who are well versed in clearance procedure and related regulations.<a href="customclearance.html">Read More ...</a></p>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="warehousing.html">Warehousing</a></h5>
-                                <p>We have a network of strategically located warehouses for consolidating and safe storage of goods in transit under the care of our logistics control and inventory management team.<a href="warehousing.html">Read More</a>  </p>
+                                <p>We have a network of strategically located warehouses for consolidating and safe storage of goods in transit under the care of our logistics control and inventory management team.<a href="warehousing.html">Read More ...</a>  </p>
                             </div>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="projectcargo.html">Project Cargo</a></h5>
-                                <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More</a><br><br></p>
+                                <p>We are an experienced logistics company which specializes in management of projects with complex logistics needs. <a href="projectcargo.html">Read More ...</a><br><br></p>
                             </div>
                         </div>
                     </div>
@@ -252,7 +252,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="courierservices.html">Courier Services</a></h5>
-                                <p>We offer customized, time-bound, cost-effective, door-to-door delivery of international courier services of your valuable Documents and Parcels / Samples with a commitment of speedy, safe and timely delivery. <a href="courierservices.html">Read More</a></p>
+                                <p>We offer customized, time-bound, cost-effective, door-to-door delivery of international courier services of your valuable Documents and Parcels / Samples with a commitment of speedy, safe and timely delivery. <a href="courierservices.html">Read More ...</a></p>
                             </div>
                         </div>
                     </div>
@@ -263,7 +263,7 @@
                             </div>-->
                             <div class="cat-cap">
                                 <h5><a href="supplychainmanagement.html">Supply Chain Management</a></h5>
-                                <p>Supply chain management (SCM) is the management of flow of goods and services. It includes movement & storage of raw material, work-in-process inventory and finished goods from point of origin to point of consumption.<a href="supplychainmanagement.html">Read More</a> </p>
+                                <p>Supply chain management (SCM) is the management of flow of goods and services. It includes movement & storage of raw material, work-in-process inventory and finished goods from point of origin to point of consumption.<a href="supplychainmanagement.html">Read More ...</a> </p>
                             </div>
                         </div>
                     </div>
